--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,24 @@
-name: my-front
+name: Deploy to Amazon S3
+
 on:
   push:
     branches:
-      - yeongho
+      - main
+
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_REGION: "ap-northeast-2"
-
     steps:
-      - name: Checkout source code.
-        uses: actions/checkout@master
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-      - name: Upload binary to S3 bucket
+      - name: Deploy to Amazon S3
         uses: jakejarvis/s3-sync-action@master
         with:
-          args: --acl public-read --exclude '*' --include 'index.html'
+          args: --acl public-read --follow-symlinks --delete
         env:
-          AWS_S3_BUCKET: ${{ secrets.BUCKET_NAME }}
-
-      - name: Invalidate cache CloudFront
-        uses: chetan/invalidate-cloudfront-action@master
-        env:
-          DISTRIBUTION: ${{ secrets.DISTRIBUTION_ID }}
-          PATHS: "/index.html"
-        continue-on-error: true
+          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: "ap-northeast-2"
+          SOURCE_DIR: ""
