--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,9 @@ jobs:
           AWS_REGION: "ap-northeast-2"
           SOURCE_DIR: ""
       - name: Invalidate CloudFront Cache
-        uses: chetan/invalidate-cloudfront-action@v2.0
+        uses: chetan/invalidate-cloudfront-action@v1.3
         env:
-          DISTRIBUTION_ID: ${{ secrets.DISTRIBUTION_ID }}
+          DISTRIBUTION: ${{ secrets.DISTRIBUTION_ID }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: "ap-northeast-2"
